# skull

./: .gitignore  LICENSE  README.md
include/: skull.h
include/skull/: app.h  aux.h  base.h  prelude.h
include/skull/app/: count.h  remove.h  replace.h  unique.h
include/skull/base/: append.h  as_type_list.h  at.h  bind.h  compose.h  identity.h  integer_sequence.h  invoke.h  is_same_template.h  prepend.h  quote.h  rename_template.h  tag.h  type_list.h  unpack.h
include/skull/prelude/: concat.h  elem.h  filter.h  foldl.h  foldr.h  head.h  id.h  init.h  last.h  length.h  map.h  max.h  maximum.h  not.h  replicate.h  reverse.h  sum.h  tail.h  take.h  zip.h
test/: CMakeLists.txt  _usage_summary.md  skull_app_test.cpp  skull_aux_test.cpp  skull_base_test.cpp  skull_prelude_test.cpp  z_etc_test.cpp
test/example/: 00_make_variant_array.cpp  01_make_tuple.cpp  02_abstract_factory.cpp
